src/objects/Id_Mapping__c.object
<CustomObject>
    <description>Temporary Object for CLM data migration - Migration of legacy agreements. Contains reference to attachment Id&apos;s to assist re-processing of migration using DataSert</description>
    <fields>
        <fullName>Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsert_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Upsert Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Id Mapping</label>
    <nameField>
        <displayFormat>IDM-{00000000}</displayFormat>
        <label>Mapping#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Id Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>